src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__accessing_nested_array_in_struct.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"

%Main = type { %MyStruct }
%MyStruct = type { [5 x i16] }

@Main_instance = global %Main zeroinitializer
@__MyStruct__init = unnamed_addr constant %MyStruct zeroinitializer

define void @Main(%Main* %0) {
entry:
  %m = getelementptr inbounds %Main, %Main* %0, i32 0, i32 0
  %field1 = getelementptr inbounds %MyStruct, %MyStruct* %m, i32 0, i32 0
  %tmpVar = getelementptr inbounds [5 x i16], [5 x i16]* %field1, i32 0, i32 3
  store i16 7, i16* %tmpVar, align 2
  ret void
}
; ModuleID = '__initializers'
source_filename = "__initializers"

%MyStruct = type { [5 x i16] }
%Main = type { %MyStruct }

@__MyStruct__init = external global %MyStruct
@Main_instance = external global %Main

declare void @Main(%Main*)

define void @__init_main(%Main* %0) {
entry:
  %self = alloca %Main*, align 8
  store %Main* %0, %Main** %self, align 8
  %deref = load %Main*, %Main** %self, align 8
  %m = getelementptr inbounds %Main, %Main* %deref, i32 0, i32 0
  call void @__init_mystruct(%MyStruct* %m)
  ret void
}

define void @__init_mystruct(%MyStruct* %0) {
entry:
  %self = alloca %MyStruct*, align 8
  store %MyStruct* %0, %MyStruct** %self, align 8
  ret void
}
; ModuleID = '__init___testproject'
source_filename = "__init___testproject"

%Main = type { %MyStruct }
%MyStruct = type { [5 x i16] }

@Main_instance = external global %Main
@__MyStruct__init = external global %MyStruct
@llvm.global_ctors = appending global [1 x { i32, void ()*, i8* }] [{ i32, void ()*, i8* } { i32 0, void ()* @__init___testproject, i8* null }]

declare void @Main(%Main*)

define void @__init___testproject() {
entry:
  call void @__init_main(%Main* @Main_instance)
  ret void
}

declare void @__init_main(%Main*)
