src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__case_with_constant_expressions_in_case_selectors.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

@FORWARD = unnamed_addr constant i32 7
@UP = unnamed_addr constant i32 8
@DOWN = unnamed_addr constant i32 15

define i32 @drive() {
entry:
  %drive = alloca i32, align [filtered]
  %input = alloca i32, align [filtered]
  %horiz = alloca i32, align [filtered]
  %depth = alloca i32, align [filtered]
  store i32 0, i32* %input, align [filtered]
  store i32 0, i32* %horiz, align [filtered]
  store i32 0, i32* %depth, align [filtered]
  store i32 0, i32* %drive, align [filtered]
  %load_input = load i32, i32* %input, align [filtered]
  switch i32 %load_input, label %else [
    i32 7, label %case
    i32 14, label %case1
    i32 8, label %case4
    i32 15, label %case6
  ]

case:                                             ; preds = %entry
  %load_horiz = load i32, i32* %horiz, align [filtered]
  %tmpVar = add i32 %load_horiz, 1
  store i32 %tmpVar, i32* %horiz, align [filtered]
  br label %continue

case1:                                            ; preds = %entry
  %load_horiz2 = load i32, i32* %horiz, align [filtered]
  %tmpVar3 = add i32 %load_horiz2, 2
  store i32 %tmpVar3, i32* %horiz, align [filtered]
  br label %continue

case4:                                            ; preds = %entry
  %load_depth = load i32, i32* %depth, align [filtered]
  %tmpVar5 = sub i32 %load_depth, 1
  store i32 %tmpVar5, i32* %depth, align [filtered]
  br label %continue

case6:                                            ; preds = %entry
  %load_depth7 = load i32, i32* %depth, align [filtered]
  %tmpVar8 = add i32 %load_depth7, 1
  store i32 %tmpVar8, i32* %depth, align [filtered]
  br label %continue

else:                                             ; preds = %entry
  br label %continue

continue:                                         ; preds = %else, %case6, %case4, %case1, %case
  %drive_ret = load i32, i32* %drive, align [filtered]
  ret i32 %drive_ret
}
