src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__case_with_multiple_labels_statement.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i32, i32 }

@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %y = getelementptr inbounds %prg, %prg* %0, i32 0, i32 1
  %load_x = load i32, i32* %x, align [filtered]
  switch i32 %load_x, label %else [
    i32 1, label %case
    i32 2, label %case
    i32 3, label %case1
    i32 4, label %case1
  ]

case:                                             ; preds = %entry, %entry
  store i32 1, i32* %y, align [filtered]
  br label %continue

case1:                                            ; preds = %entry, %entry
  store i32 2, i32* %y, align [filtered]
  br label %continue

else:                                             ; preds = %entry
  store i32 -1, i32* %y, align [filtered]
  br label %continue

continue:                                         ; preds = %else, %case1, %case
  ret void
}
