src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__case_with_ranges_statement.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i32, i32 }

@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %y = getelementptr inbounds %prg, %prg* %0, i32 0, i32 1
  %load_x = load i32, i32* %x, align [filtered]
  switch i32 %load_x, label %else [
  ]

case:                                             ; preds = %range_then
  store i32 2, i32* %y, align [filtered]
  br label %continue

else:                                             ; preds = %entry
  %load_x1 = load i32, i32* %x, align [filtered]
  %tmpVar = icmp sge i32 %load_x1, 2
  br i1 %tmpVar, label %range_then, label %range_else

range_then:                                       ; preds = %else
  %load_x2 = load i32, i32* %x, align [filtered]
  %tmpVar3 = icmp sle i32 %load_x2, 3
  br i1 %tmpVar3, label %case, label %range_else

range_else:                                       ; preds = %range_then, %else
  br label %continue

continue:                                         ; preds = %range_else, %case
  ret void
}
