src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__class_member_access_from_method.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%MyClass = type { i16, i16 }

define void @MyClass(ptr %0) {
entry:
  %x = getelementptr inbounds nuw %MyClass, ptr %0, i32 0, i32 0
  %y = getelementptr inbounds nuw %MyClass, ptr %0, i32 0, i32 1
  ret void
}

define void @MyClass__testMethod(ptr %0, i16 signext %1) {
entry:
  %x = getelementptr inbounds nuw %MyClass, ptr %0, i32 0, i32 0
  %y = getelementptr inbounds nuw %MyClass, ptr %0, i32 0, i32 1
  %myMethodArg = alloca i16, align [filtered]
  store i16 %1, ptr %myMethodArg, align [filtered]
  %myMethodLocalVar = alloca i16, align [filtered]
  store i16 0, ptr %myMethodLocalVar, align [filtered]
  %load_myMethodArg = load i16, ptr %myMethodArg, align [filtered]
  store i16 %load_myMethodArg, ptr %x, align [filtered]
  %load_x = load i16, ptr %x, align [filtered]
  store i16 %load_x, ptr %y, align [filtered]
  %load_myMethodLocalVar = load i16, ptr %myMethodLocalVar, align [filtered]
  %2 = sext i16 %load_myMethodLocalVar to i32
  %load_y = load i16, ptr %y, align [filtered]
  %3 = sext i16 %load_y to i32
  %tmpVar = icmp eq i32 %2, %3
  ret void
}
